Removed unused code for checkpoint 1